homeworks-netology/13-kubenet-03-k8snet/assets/app-svc-cache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment-cache
  namespace: 13-kubenet-03-k8snet
  labels:
    app: app-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-cache
  template:
    metadata:
      labels:
        app: app-cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: svc-cache
  namespace: 13-kubenet-03-k8snet
spec:
  selector:
    app: app-cache
  ports:
    - name: multitool-cache-http
      port: 80
      targetPort: 80
