homeworks-netology/13-kubenet-03-k8snet/assets/np-denyall.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-deny-all
  namespace: 13-kubenet-03-k8snet
spec:
  podSelector: {}
  policyTypes:
    - Ingress
