homeworks-netology/13-kubenet-03-k8snet/assets/np-frontend.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-frontend
  namespace: 13-kubenet-03-k8snet
spec:
  podSelector:
    matchLabels:
      app: app-frontend
  policyTypes:
      - Ingress
      - Egress
  ingress: []
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: app-backend
      ports:
        - port: 80
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
